2007-02-26  Geoffrey Keating  <geoffk@apple.com>

	* gcc.target/powerpc/stabs-attrib-vect-darwin.c: Allow
	for more builtin types.

	* g++.dg/ext/visibility/class1.C: Port to Darwin.
	* g++.dg/ext/visibility/noPLT.C: Likewise.

2007-02-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/torture/builtin-modf-1.c: Use -fno-finite-math-only on
	sh* targets.

2007-02-26  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/30865
	* size_optional_dim_1.f90:  New test.

2007-02-25  Mark Mitchell  <mark@codesourcery.com>

	* gcc.dg/vxworks/vxworks.exp: New file.
	* gcc.dg/vxworks/initpri1.c: Likewise.
	* gcc.dg/vxworks/initpri2.c: Likewise.
	* gcc.dg/initpri2.c: Add more tests.
	* g++.dg/special/initpri2.C: Likewise.

	* gcc.dg/initpri1.c: New test.
	* gcc.dg/initpri2.c: Likewise.
	* g++.dg/special/initpri1.C: New test.
	* g++.dg/special/initpri2.C: Likewise.
	* g++.dg/special/conpr-1.C: Use init_priority effective target.
	* g++.dg/special/conpr-2.C: Likewise.
	* g++.dg/special/conpr-3.C: Likewise.
	* g++.dg/special/conpr-4.C: Likewise.
	* g++.dg/special/initp1.C: Likewise.
	* g++.dg/special/ecos.exp: Remove code to detect availability of
	constructor priorities.
	* lib/target-support.exp (target_init_priority): New function.

2007-02-24  Jan Hubicka  <jh@suse.cz>

	* gcc.c-torture/execute/pr30778.c: New testcase.

2007-02-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/30918
	* gfortran.dg/namelist_26.f90: New test.

2007-02-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30951
	* gcc.dg/pr30951.c: New testcase.

2007-02-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/torture/builtin-modf-1.c: New test.

2007-02-23  Paolo Bonzini  <bonzini@gnu.org>

        PR tree-optimization/30904
	* gcc.dg/pr30904.c: New test.

2007-02-23  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* gcc.test-framework/README: Correct command.
	* gcc.test-framework/dg-outexistsnot-exp-P.c: Replace -W with
	-Wunused-value.